@@ -55,6 +55,7 @@ BETA ======= 1.9.0
 - added: SchemaBuilderEntity.setError(function(error, model, type, name));
 - added: F.snapshop(url, filename, [callback]);
 - added: CLEANUP(stream, [callback]) - clean up readable streams
+- added: configs directory
 
 - updated: (IMPORTANT) routing: `json` flag is not required for receiving incomming data as JSON
 - updated: `F.mail(address, subject, view, [model], [callback], [language])` added language
